BLP-50: Fix spacing issues of pre-order form thanks section.

--- a/public/landingPage/stylesheets/responsive.css
+++ b/public/landingPage/stylesheets/responsive.css
@@ -266,6 +266,43 @@
 }
 
 @media (max-width: 480px) {
+  .thankYuoTitle h1{
+    font-weight: 300;
+    font-size: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-top: 25px;
+  }
+
+  .thankYouParagraph p {
+    font-weight: 300;
+    font-size: 18px;
+    margin-left: auto !important;
+    text-align: center;
+  }
+
+  .thankYouButton {
+    margin-left: 0%;
+    margin-top: 0%;
+    padding: 16px;
+    text-align: center;
+  }
+
+  .thankYouButton > .btn {
+    font-weight: 300;
+    font-size: 15px;
+    text-align: center;
+    margin: auto;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+  .happyBiinie img {
+    width: 100%;
+    height: 100%;
+    margin-top: 0%;
+    margin-left: 0%;
+  }
   blockquote {
     font-size: 20px !important;
     margin: 60px 0px 80px 0px;
